Fixed: Avatars were slightly off center (2 pixels lol).

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -304,6 +304,7 @@ p {
     max-width: 100%;
     max-height: 100%;
     top: 0px;
+    margin-left: 2px;
 }
 
 
